big nits mostly isClientSide -> isClientSide()